--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap-validation": "^0.1.11",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
